tdf#122342 DOCX import: fix bottom auto margin in lists

at paragraph style based numbering.

See also commit 1bf7f6a1a50ee9f24a3687240fe6ae390b905a6b
(tdf#106690 DOCX import: fix automatic spacing before/after
numbered para block).

Change-Id: I532181019ca97a86475c9bb0a1eea1c836705bab
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/93581
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>